results/SVCOMP/2-shot/log-ArrayWhatNot-2024_03_18_22_56_38.txt
class ArrayWhatNot {

  class what_not {
  };

  //@ requires size >= 0;
  //@ ensures \result == -1 && size < 8 || \result == 0 && (int_array[7] != 7 || what_not_array.length != size) || \result == 1;
  public static int func(int size) {
    if (size < 8) return -1;

    int int_array[] = new int[size];

    //@ assume \forall int i; 0 <= i && i < size; int_array[i] == i;

    for (int i = 0; i < size; i++)
      int_array[i] = i;

    if (int_array[7] != 7)
      return 0;

    what_not what_not_array[] = new what_not[size];

    //@ assume \forall int i; 0 <= i && i < size; what_not_array[i] != null;

    if (what_not_array.length != size)
      return 0;
    return 1;
  }
}
/home/max/Documents/JMLGPT/tmp/ArrayWhatNot.java:7: error: cannot find symbol
  //@ ensures \result == -1 && size < 8 || \result == 0 && (int_array[7] != 7 || what_not_array.length != size) || \result == 1;
                                                            ^
  symbol:   variable int_array
  location: class ArrayWhatNot
/home/max/Documents/JMLGPT/tmp/ArrayWhatNot.java:7: error: cannot find symbol
  //@ ensures \result == -1 && size < 8 || \result == 0 && (int_array[7] != 7 || what_not_array.length != size) || \result == 1;
                                                                                 ^
  symbol:   variable what_not_array
  location: class ArrayWhatNot
2 errors

